# app-reviews-scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  app.conf  package.json  pyproject.toml  requirements.txt  scraper.py  setup.py
app_scraper/: app_store.py  apple.js  constants.py  google.js  play_store.py  utils.py
notebooks/: .env.example  csv-number-reviews-time-series.ipynb  csv-number-reviews.ipynb  detect-review-lang.ipynb  requirements.txt
play-store/: app.py  apps-list.json  requirements.txt
scraper_backend/: clients.py  constants.py  utils.py
src/: app_store.py  core.py  play_store.py  utils.py
src/app_scraper/: app_store.py  constants.py  core.py  play_store.py  utils.py
src/app_scraper/extra/: app-store-details.js  app-store-details.py  app-store-similar.js  app-store.js  play-store-similar.js  play-store.js
src/extra/: app-store.js  play-store.js
