[tool.poetry]
name = "app-scraper"
version = "0.1.0"
description = ""
authors = ["Pietro Rampazzo <pietro@rampazzo.co>"]

[tool.poetry.dependencies]
python = "^3.9"
pyhocon = "^0.3.59"
app-store-scraper = {git = "https://github.com/peterampazzo/app-store-scraper.git", rev = "master"}
google-play-scraper = "^1.0.2"
# gcld3 = "^3.0.13"
pandas = "^1.3.5"
play-scraper = "^0.6.0"
jupyterlab = "^3.2.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
